Fixed one of the off screen issues

--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@ a:hover {
 
 body {
   margin: 0;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 h1 {
